Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2902907 by drunken monkey, juagarc4: Fixed indexing of multibyte text on
  MySQL.
- #2903805 by drunken monkey: Disabled fields processors for hidden fields.
- #2903014 by drunken monkey: Fixed "Enable for all fields" processor option.
- #2904976 by drunken monkey: Fixed the current test fails.
- #2902810 by drunken monkey, borisson_: Made query serialization in tests
  safer.
- #2903834 by drunken monkey: Adapted to latest changes in Autocomplete module.
- #2903633 by drunken monkey: Fixed current test fails.
- #2899920 by kfritsche: Fixed stored value of boolean Views filters.
- #2896312 by kerasai, drunken monkey: Fixed problems with Views options list
  filter.
- #2896878 by drunken monkey: Fixed test fails due to latest Core changes.
- #2665476 by ericgsmith, drunken monkey: Fixed paging in cached views.

Search API 1.3 (2017-07-19):
----------------------------
- #2888584 by drunken monkey: Fixed index description for "cron batch size" of
  -1.
- #2895142 by drunken monkey: Made our test classes more useful for other
  modules.
- #2851436 by Erik Frèrejean, andywhale, beltofte, drunken monkey: Added a
  "Type-specific boosting" processor.
- #2889426 by cspitzlay, drunken monkey: Fixed test fails on Drupal 8.3.
- #2891387 by drunken monkey: Fixed some new code style issues.
- #2891246 by drunken monkey: Fixed error detection in plugin helper.
- #2884451 by drunken monkey: Fixed missing primary key for denormalized index
  tables in DB backend.
- #2886978 by drunken monkey: Fixed tracking of entities in disabled languages.

Search API 1.2 (2017-06-25):
----------------------------
- #2881198 by jzavrl, drunken monkey, borisson_: Added property paths to "Add
  fields" form.
- #2883475 by Matthijs, drunken monkey, borisson_: Added support for "Language
  not applicable".
- #2883807 by LammensJ, drunken monkey: Fixed warning in Views UI for
  contextual filters.