@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2902947 by drunken monkey: Fixed "Thousands marker" setting for Views fields.
 - #2902907 by drunken monkey, juagarc4: Fixed indexing of multibyte text on
   MySQL.
 - #2903805 by drunken monkey: Disabled fields processors for hidden fields.
